<resources>
    <string name="app_name">GrO2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="add_habit">Add New Habit</string>
    <string name="edit_habit">Edit Habit</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    S
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="difficulty">Difficulty</string>
    <string name="frequency">Frequency</string>


    <string name="habits">Habits</string>
    <string name="greeting">Hello John Smith, lets look at your progress for today!</string>

    <string-array name="difficultyArray">
        <item name="easy">Easy</item>
        <item name="medium">Medium</item>
        <item name="hard">Hard</item>
    </string-array>

    <string-array name="frequencyArray">
        <item name="daily">Daily</item>
        <item name="weekly">Weekly</item>
        <item name="monthly">Monthly</item>
    </string-array>

    <string name="rewards">Rewards</string>
    <string name="add_reward">Add New Reward</string>
    <string name="edit_reward">Edit Reward</string>
    <string name="price">Price</string>

</resources>
